kubernetes/pinepods/helm/valkey/headless-svc.yaml
---
# Source: pinepods/charts/valkey/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinepods-valkey-headless
  namespace: "pinepods"
  labels:
    app.kubernetes.io/instance: pinepods
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valkey
    app.kubernetes.io/version: 8.0.1
    app.kubernetes.io/part-of: valkey
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-redis
      port:  6379
      targetPort: redis
  selector:
    app.kubernetes.io/instance: pinepods
    app.kubernetes.io/name: valkey
