kubernetes/pinepods/helm/valkey/networkpolicy.yaml
---
# Source: pinepods/charts/valkey/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pinepods-valkey
  namespace: "pinepods"
  labels:
    app.kubernetes.io/instance: pinepods
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valkey
    app.kubernetes.io/version: 8.0.1
    app.kubernetes.io/part-of: valkey
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: pinepods
      app.kubernetes.io/name: valkey
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    # Allow inbound connections
    - ports:
        - port: 6379
